--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -16,7 +16,7 @@
 	font-family: consolas, Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 	font-weight: 400;
 
-	--width: min(100vw, (calc(100vh * 2 / 3)));
+	--width: min(100vw, (calc(100dvh * 2 / 3)));
 	font-size: calc(var(--width) / 35);
 
 	background: var(--clr-background);
